# hello

./: README.md  pyproject.toml
hello/: __init__.py  __main__.py  greetings.py  hello.py
tests/: test_hello.py
