[tool.poetry]
name = "hello"
version = "0.1.1"
description = ""
authors = ["Weverton Marques <wevertonms@gmail.com>", "Josué Neto <josueneto@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^19.10b0"
pylint = "^2.5.0"

[tool.poetry.scripts]
hello = 'hello:main'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
